[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20" , features = ["headers"]}
serde_json = "1.0.106"
serde = { version = "1.0.188", features = ["derive"]}
arangors = "0.5.4"
tower-http = { version = "0.4.4", features = ["cors"]}
bcrypt = "0.15.0"

